--- a/.gitignore
+++ b/.gitignore
@@ -1,51 +1,61 @@
 admin-csr.json             
-admin-key.pem              
+admin.key              
 admin.csr                  
 admin.pem                  
 admin.kubeconfig
 ca-config.json             
 ca-csr.json                
-ca-key.pem                 
+ca.key                 
 ca.csr                     
 ca.pem                     
 /encryption-config.yaml
 kube-controller-manager-csr.json
-kube-controller-manager-key.pem
+kube-controller-manager.key
 kube-controller-manager.csr
 kube-controller-manager.kubeconfig
 kube-controller-manager.pem
 kube-scheduler-csr.json
-kube-scheduler-key.pem
+kube-scheduler.key
 kube-scheduler.csr
 kube-scheduler.kubeconfig
 kube-scheduler.pem
 kube-proxy-csr.json        
-kube-proxy-key.pem         
+kube-proxy.key         
 kube-proxy.csr             
 kube-proxy.kubeconfig      
 kube-proxy.pem             
 kubernetes-csr.json        
-kubernetes-key.pem         
+kubernetes.key         
 kubernetes.csr             
 kubernetes.pem             
-worker-0-csr.json          
-worker-0-key.pem
-worker-0.csr
-worker-0.kubeconfig
-worker-0.pem
-worker-1-csr.json
-worker-1-key.pem
-worker-1.csr
-worker-1.kubeconfig
-worker-1.pem
+node-0-csr.json          
+node-0.key
+node-0.csr
+node-0.kubeconfig
+node-0.pem
+node-1-csr.json
+node-1.key
+node-1.csr
+node-1.kubeconfig
+node-1.pem
 worker-2-csr.json
-worker-2-key.pem
+worker-2.key
 worker-2.csr
 worker-2.kubeconfig
 worker-2.pem
-service-account-key.pem
+service-account.key
 service-account.csr
 service-account.pem
 service-account-csr.json
 *.swp
 .idea/
+downloads/
+hosts
+*_rsa
+*_rsa.pub
+*.crt
+*.csr
+*.key
+*.conf
+*-config.yaml
+*machines.txt
